--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,6 +1,14 @@
 html,
 body {
 	height: 100%;
+    background: url('/img/background.jpg') no-repeat left top fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Dosis', 'Helvetica', 'Sans Serif';
+    font-weight: 400;
+    color: white;
 }
 
 .wrap {
@@ -10,82 +18,63 @@ body {
 	padding: 0 0 60px;
 }
 
+.container {
+    max-width: 650px;
+    margin: 0px auto;
+}
+
+#navbar {
+    background: url('/img/navbar.png') no-repeat;
+    width: 633px;
+    height: 84px;
+    z-index: 1000;
+    margin: 50px auto 0px auto;
+}
+
+#navbar-links {
+    float: right;
+    margin: 51px -35px 0px 0px;
+}
+
+#navbar-links li {
+    float: left;
+    list-style-type: none;
+    font-size: 30px;
+}
+
+#navbar-links li:nth-child(1) { margin-right: 36px } 
+#navbar-links li:nth-child(2) { margin-right: 25px } 
+#navbar-links li:nth-child(3) { margin-right: 20px } 
+#navbar-links li:last-child { margin-left: 0px; margin-right: 0px; }
+
+#navbar-links li a, #navbar-links li a:hover, #navbar-links li a:active {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+h1.title {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Dosis', 'Helvetica', 'Sans Serif';
+    text-transform: uppercase;
+}
+
+p.content {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 0px 0px 30px;
+    font-family: 'Dosis', 'Helvetica', 'Sans Serif';
+    line-height: 25px;
+}
+
+#home-page {
+    float: right;
+    width: 59%;
+
+}
+
 .wrap > .container {
     padding: 70px 15px 20px;
-}
-
-.footer {
-	height: 60px;
-	background-color: #f5f5f5;
-	border-top: 1px solid #ddd;
-	padding-top: 20px;
-}
-
-.jumbotron {
-	text-align: center;
-	background-color: transparent;
-}
-
-.jumbotron .btn {
-	font-size: 21px;
-	padding: 14px 24px;
-}
-
-.not-set {
-	color: #c55;
-	font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-	position: relative;
-	top: 1px;
-	display: inline-block;
-	font-family: 'Glyphicons Halflings';
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	padding-left: 5px;
-}
-
-a.asc:after {
-	content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-	content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-	content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-	content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-	content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-	content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-	display: block;
-	margin-top: 5px;
-	color: #999;
-}
-
-.error-summary {
-	color: #a94442;
-	background: #fdf7f7;
-	border-left: 3px solid #eed3d7;
-	padding: 10px 20px;
-	margin: 0 0 15px 0;
 }
