--- a/web/css/site.css
+++ b/web/css/site.css
@@ -98,6 +98,8 @@ p.content {
     width: 120px;
 }
 
+#rsvp-footer { font-size: 16px; }
+
 .wrap > .container {
     padding: 70px 15px 20px;
 }
@@ -106,5 +108,7 @@ div.required label:after {
     content: " *";
     color: #a94442;
 }
+
+a, a:visited, a:active {color: white; text-decoration: underline;}
 
 .clear {clear: both;}
