--- a/web/css/site.css
+++ b/web/css/site.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     font-family: 'Dosis', 'Helvetica', 'Sans Serif';
     font-weight: 400;
-    color: white;
+    color: #fcfae8;
 }
 
 .wrap {
@@ -47,13 +47,14 @@ body {
 #navbar-links li:last-child { margin-left: 0px; margin-right: 0px; }
 
 #navbar-links li a, #navbar-links li a:hover, #navbar-links li a:active {
-    color: white;
+    color: #fcfae8;
     text-decoration: none;
     cursor: pointer;
     text-transform: uppercase;
 }
 
 h1.title {
+    color: #fcfae8;
     font-size: 30px;
     font-weight: 600;
     font-family: 'Dosis', 'Helvetica', 'Sans Serif';
@@ -66,6 +67,7 @@ p.content {
     margin: 20px 0px 0px 30px;
     font-family: 'Dosis', 'Helvetica', 'Sans Serif';
     line-height: 25px;
+    color: #fcfae8;
 }
 
 #home-page {
@@ -75,16 +77,18 @@ p.content {
 }
 
 .contact-page h1 {
+    color: #fcfae8;
     float: right;
     width: 58%;
 }
 
-#contact-form input[type=text], #contact-form textarea { border: 2px solid white; background-color: transparent; color: white; }
+#contact-form input[type=text], #contact-form textarea { border: 2px solid #fcfae8; background-color: transparent; color: #fcfae8; }
 
 #contact-form label {
     font-size: 20px;
     font-weight: 400;
     text-transform: uppercase;
+    color: #fcfae8;
 }
 
 #contact-form .help-block {
@@ -93,7 +97,7 @@ p.content {
 
 #contact-form button[type=submit] {
     background-color: transparent;
-    border: 2px solid white;
+    border: 2px solid #fcfae8;
     text-transform: uppercase;
     width: 120px;
 }
@@ -109,6 +113,10 @@ div.required label:after {
     color: #a94442;
 }
 
-a, a:visited, a:active {color: white; text-decoration: underline;}
+a, a:visited, a:active {color: #fcfae8; text-decoration: underline;}
+
+img#crepes {width: 590px; margin: 20px 0px 0px 30px;}
+
+.map {margin: 20px 0px 0px 30px;}
 
 .clear {clear: both;}
